--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,10 @@ a {
     color: black;
 }
 
+.hide {
+    display: none;
+}
+
 
 /* --------------------------- HEADER --------------------------- 
 */
@@ -57,7 +61,7 @@ header img {
 /* --------- NAV BAR TOGGLE --------- */
 
 .navMobile {
-    background-color: rgba(255, 255, 255, 0.762);  
+    background-color: rgba(255, 255, 255, 0.75);  
     border: solid 2px white;
     border-radius: 10px;
     top: 120%;
