--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,6 +140,7 @@ h2 {
 }
 
 
+
 /* ----- SECTION 1 ----- */
 .containerFlex {
     display: flex;
@@ -193,6 +194,135 @@ form label:last-child {
 
 #btnAgePrompt:active {
     box-shadow: 0 0px 0px 0px #000000, inset 0 1px 13.5px -0.5px #000000;
+}
+
+/* ----- SECTION 2 ----- */
+
+#containerCenter {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.containerColumn {
+    display: flex;
+    flex-direction: column;
+    gap: 5vh;
+    height: 100%;
+}
+
+#section2 h2 {
+    margin: 1rem auto;
+    
+}
+
+#numberToBeFound {
+    border-radius: 5px;
+    color: green;
+    display: flex;
+    align-items: center;
+    border: solid 1px;
+    border-radius: 10px;
+    box-shadow: 0 1px 10.5px 2px #000000;
+    height: fit-content;
+    margin: auto;
+    padding: 1em 2em;
+}
+
+#section2 {
+    width: 80%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+#section2 button {
+    margin: auto;
+    width: fit-content;
+}
+
+#section2 p {
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+.redColor {
+    color: rgb(192, 4, 4);
+}
+
+.blueColor {
+    color: rgb(1, 1, 196);
+}
+
+.container_chara {
+    display: flex;
+    justify-content: center;
+    gap: 0 2rem;
+    padding: 3rem 0;
+    margin: 1rem 0;
+    text-align: center;
+    background-color: bisque;
+    border-radius: 20px;
+    border: solid 2px;
+}
+
+.container_chara img {
+    margin: 1rem 5rem;
+}
+
+
+#scoreLabel {
+    text-align: center;
+    color: black;
+}
+
+#score {
+    margin: 1rem auto;
+    padding: 1em 2em;
+    border: solid 1px;
+    border-radius: 50%;
+    width: fit-content;
+    background-color: green;
+    color: white;
+}
+
+
+/* Imgs */
+
+/* characters */
+.characters {
+    width: 150px;
+    height: 250px;
+    background-size: auto;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+
+/* Chara 1 Red */
+.chara1BaseRed {
+    background-image: url("../img/bR.png");
+}
+
+.chara1Win0Red {
+    background-image: url("../img/bR-win0.png");
+}
+
+.chara1Win1Red {
+    background-image: url("../img/bR-win1.png");
+}
+
+/* Chara 2 Blue */
+.chara2BaseBlue {
+    background-image: url("../img/bB.png");
+}
+
+.chara2Win0Blue {
+    background-image: url("../img/bB-win0.png");
+}
+
+.chara2Win1Blue {
+    background-image: url("../img/bB-win1.png");
 }
 
 
